# backend-ii

./: pyproject.toml
Aula 2/app/: main.py
Aula 2/app/observer/: observer.py  subject.py
Aula 2/app/payment/: payment_factory.py  payment_method.py
Aula 4/multithread_multiprocess/: pyproject.toml
Aula 4/multithread_multiprocess/src/multithread_multiprocess/: multiprocess.py  multithread.py
concurrency_overview/src/importer/: db.py
