[tool.poetry]
name = "backend-ii"
version = "0.1.0"
description = ""
authors = ["Jessiellen <jessiellen@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
